# Auto-Installer-For-Beginners

./: .gitignore  README.md  config.toml  install-agent.ps1  main.py  pyproject.toml  requirements.txt  ui.py
desktop-agent/: main.py
desktop_agent/: Commands.py  main.py
src/: graph.py  graph.py.tmp.42548.5541e53c38b3  nodes.py  state.py  tools.py  utils.py
