[project]
name = "auto-installer-for-beginners"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.2.1",
    "langchain-openrouter>=0.2.3",
    "langgraph>=1.2.0",
    "openai>=2.36.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.1",
    "tavily-python>=0.5.0",
]
